# reviews-parsing-mlsys

./: .env.example  .gitignore  Jenkinsfile  README.md  common.cfg  pyproject.toml
deploy/cloud/gke/: README.md  delete-installed.sh  openapi.example.yaml
deploy/cloud/gke/ingress/: Chart.yaml  values.yaml
deploy/cloud/gke/ingress/templates/: _helpers.tpl  cert-issuer.yaml  ingress.yaml
deploy/cloud/gke/terraform/: main.tf  outputs.tf  variables.tf
deploy/gke/: README.md  cert-issuer.example.yaml  delete-installed.sh  openapi.example.yaml
deploy/gke/ingress/: values.yaml
deploy/gke/ingress/templates/: cert-issuer.yaml  ingress.yaml
deploy/gke/terraform/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
deploy/local/kind/: README.md  values.yaml
deploy/services/istio/: istio.yaml
deploy/services/jaeger/: values.yaml
deploy/services/jenkins/: values.yaml
deploy/services/jenkins/k8s-auth/manual/: jenkins-clusterrolebinding.yaml  jenkins-service-account.yaml  jenkins-token-secret.yaml
deploy/services/kserve/: inference.yaml
deploy/services/mlflow/: values-nginx.yaml  values.dev.yaml  values.yaml  vpa.yaml
deploy/services/nginx-controller/: configmap.yaml  values.yaml
models/reviews-parsing-ner-aspects/: .env.example  Dockerfile  Makefile  README.md  compose.yml  model-settings.json  model.py  requirements.no-gpu.txt  requirements.txt
notebooks/: train.ipynb
scripts/: alias_new_mlflow_model_as_champion.py  generate_repo_structure.sh
